--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "empty-project",
+  "name": "fashionista-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "React"
+  ],
+  "author": "Kelvin",
+  "repository": {
+    "url": "https://github.com/kfurfles/personal-fashionista"
+  },
   "license": "ISC",
   "scripts": {
     "clean": "rm dist/bundle.js",
@@ -31,8 +36,11 @@
     "file-loader": "5.1.0",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-template": "6.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "4.13.1",
+    "postcss-discard-duplicates": "^4.0.2",
     "postcss-loader": "3.0.0",
+    "postcss-scss": "^2.0.0",
     "sass-loader": "8.0.2",
     "style-loader": "1.1.3",
     "typescript": "3.8.3",
