--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode development",
     "build": "webpack -p --mode production",
-    "start": "webpack-dev-server --hot --mode development"
+    "start": "webpack-dev-server --hot --mode development",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^16.13.0",
@@ -24,25 +25,34 @@
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
-    "@babel/preset-env": "7.8.7",
-    "@babel/preset-react": "7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "@hot-loader/react-dom": "16.12.0",
-    "@types/react": "16.9.23",
+    "@types/jest": "^25.1.3",
+    "@types/react": "^16.9.23",
     "@types/react-dom": "16.9.5",
+    "@types/react-test-renderer": "^16.9.2",
     "autoprefixer": "9.7.4",
     "awesome-typescript-loader": "5.2.1",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.4.2",
     "file-loader": "5.1.0",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-template": "6.2.0",
+    "jest": "^25.1.0",
+    "jest-fetch-mock": "^3.0.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "4.13.1",
     "postcss-discard-duplicates": "^4.0.2",
     "postcss-loader": "3.0.0",
     "postcss-scss": "^2.0.0",
+    "react-test-renderer": "^16.13.0",
     "sass-loader": "8.0.2",
     "style-loader": "1.1.3",
+    "ts-jest": "^25.2.1",
     "typescript": "3.8.3",
     "url-loader": "3.0.0",
     "webpack": "4.42.0",
