--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,12 @@
         "moduleResolution": "node",
         "target": "es5",
         "allowJs": true,
+        "esModuleInterop": true,
         "jsx": "react",
+        "allowSyntheticDefaultImports": true,
+        "typeRoots": [
+            "./node_modules/@types"
+        ]
     },
     "include": [
         "./src/**/*"
