--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build-dev": "webpack -d --mode development",
     "build": "webpack -p --mode production",
     "start": "webpack-dev-server --hot --mode development",
-    "test": "jest"
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage"
   },
   "dependencies": {
     "react": "^16.13.0",
