--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build-dev": "webpack -d --mode development",
     "build": "webpack -p --mode production",
     "start": "webpack-dev-server --hot --mode development",
-    "test": "jest --coverage",
+    "test": "cross-env CI=true jest --coverage",
     "test:watch": "jest --watch --coverage"
   },
   "dependencies": {
@@ -39,10 +39,12 @@
     "babel-core": "^7.0.0-0",
     "babel-jest": "^25.1.0",
     "babel-loader": "8.0.6",
+    "cross-env": "^7.0.2",
     "css-loader": "3.4.2",
     "file-loader": "5.1.0",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-template": "6.2.0",
+    "husky": "^4.2.3",
     "jest": "^25.1.0",
     "jest-fetch-mock": "^3.0.2",
     "mini-css-extract-plugin": "^0.9.0",
@@ -59,5 +61,10 @@
     "webpack": "4.42.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   }
 }
