--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,13 @@
         "jsx": "react",
         "allowSyntheticDefaultImports": true,
         "typeRoots": [
-            "./node_modules/@types"
+            "node_modules/@types",
         ]
     },
     "include": [
         "./src/**/*"
+    ],
+    "exclude": [
+        "node_modules", "dist"
     ]
 }
