--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.19",
+    "react-router-dom": "^5.1.2",
     "sass-resources-loader": "^2.0.1"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/jest": "25.1.4",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-test-renderer": "16.9.2",
     "autoprefixer": "9.7.4",
     "awesome-typescript-loader": "5.2.1",
@@ -48,9 +50,9 @@
     "file-loader": "5.1.0",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-template": "6.2.0",
-    "jest-css-modules": "2.1.0",
     "husky": "4.2.3",
     "jest": "25.1.0",
+    "jest-css-modules": "2.1.0",
     "jest-fetch-mock": "3.0.3",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "4.13.1",
